# lang-benchmarks

./: .gitignore  README.md  bench.sh  java-opts.sh
c_bench/: test.c
clojure_bench/: README.md  project.clj
clojure_bench/doc/: intro.md
clojure_bench/src/clojure_bench/: core.clj
clojure_bench/test/clojure_bench/: core_test.clj
elixir_bench/: bench.ex
erlang_bench/: bench.erl  bench_parallel.erl
go_bench/: bench.go
groovy_bench/: build.gradle
groovy_bench/src/main/groovy/test/: App.groovy
haskell_bench/: Main.hs  haskell_bench.cabal
java_bench/: build.gradle
java_bench/src/main/java/test/: App.java
javascript_bench/: package.json  test.js
jython_bench/: __run__.py  build.gradle
python_bench/: test.py
rust_bench/: bench.rs
scala_bench/: build.gradle
scala_bench/src/main/scala/: SimpleApp.scala
